# cheetah

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.py  setup.ps1  setup.py  setup.sh  train_rlhf.py
cheetah/: __init__.py  logging_utils.py
cheetah/agent/: functions.py
cheetah/agent/prompts/: cot_agent_system_prompt.j2
cheetah/agent/tests/: test_agent_loop.py  test_functions.py  test_model.py  test_prompt_loader.py
cheetah/models/llm/: backend.py
cheetah/models/llm/exllamav3/: __init__.py  helpers.py  model.py  model_config.py  quantize.py
cheetah/models/llm/tests/: test_backend.py
cheetah/models/llm/tinygrad/: attention.py  helpers.py  kv_cache.py  model.py  model_config.py  quantize.py  rope.py  transformer.py
cheetah/models/llm/tinygrad/tests/: test_helpers.py  test_kv_cache.py  test_llama_model.py  test_llama_quant_model.py  test_mha.py  test_mlp.py  test_model.py  test_model_config.py  test_model_core.py  test_quantized_helpers.py  test_qwen_model.py  test_rope.py
cheetah/models/llm/torch/: __init__.py  helpers.py  mamba_mixer.py  mamba_mlp.py  mamba_model.py  model.py  model_config.py  quantize.py
cheetah/models/llm/torch/tests/: test_gpt_oss_model.py  test_helpers.py  test_kv_cache.py  test_mamba_model.py  test_mha.py  test_mlp.py  test_model.py  test_model_config.py  test_quant_model.py  test_quantized_helpers.py  test_rope.py
cheetah/orchestration/: cdevice.py  device_info.py  distributed_inference.py  distributed_probe.py  model_engine.py  peer_client.py
cheetah/orchestration/tests/: test_backend_device_env.py  test_backend_load_model.py  test_device_info.py  test_model_engine.py  test_peer_client.py
cheetah/repos/: repo_custom.py  repo_huggingface.py
cheetah/repos/tests/: __init__.py
cheetah/tests/: test_logging_utils.py
cheetah/tui/: agent_screen.py  chat_log_storage.py  chat_menu.py  connect_peer_screen.py  helpers.py  main_menu.py  orchestration_screen.py  orchestration_screen.tcss  settings_screen.py  train_menu.py  train_menu.tcss  training_path.tcss  training_path_screen.py
cheetah/tui/tests/: test_agent_screen.py  test_chat_menu.py  test_helpers.py  test_model_picker_screen.py  test_orchestration_screen.py  test_settings_screen.py  test_train_menu.py
cheetah/tui/widget/: model_picker_screen.py  static_footer.py
docs/: distributed_inference_map.md
models/: attention.cpp  attention.h  cache.cpp  cache.h  general_mha.cpp  general_mha.h  general_mha_model.cpp  general_mha_model.h  general_model.cpp  general_model.h  mlp.h  rms.cpp  rms.h  rope.cpp  rope.h  transformer.cpp  transformer.h
src/: attention.cpp  attention.h  general_mha_model.cpp  general_mha_model.h  mlp.cpp  mlp.h  rms.cpp  rms.h  rope.cpp  rope.h  transformers.cpp  transformers.h
src/tests/: CMakeLists.txt  tensor_server.cpp  test_gmha_client.cpp  test_gmha_pyclient.py  test_inference.cpp  test_load_model_config.cpp  test_safetensor_load.cpp  test_tensor_client.py  test_tensor_server.cpp  test_xotorch_interface.cpp
src/utils/: cache.cpp  cache.h  config.h  helpers.cpp  helpers.h  model_config.cpp  model_config.h  safetensors_loader.cpp  safetensors_loader.h  sessionmgmt.cpp  sessionmgmt.h  shard.cpp  shard.h  system_utils.cpp  system_utils.h
tiny_cheetah/: logging_utils.py
tiny_cheetah/agent/: prompt_loader.py
tiny_cheetah/agent/tests/: test_prompt_loader.py
tiny_cheetah/models/llm/torch/: __init__.py  attention.py  helpers.py  kv_cache.py  mamba_attention.py  mamba_block.py  mamba_model.py  model_config.py  quantize.py
tiny_cheetah/models/llm/torch/tests/: test_helpers.py  test_mamba_model.py  test_mha.py  test_model_config.py
tiny_cheetah/repos/: repo_huggingface.py
tiny_cheetah/tests/: test_logging_utils.py
tiny_cheetah/tui/: agent_screen.py  agent_screen.tcss  chat_menu.py  chat_menu.tcss  helpers.py  orchestration_screen.py  settings_screen.py  train_menu.py  training_path_screen.py
tiny_cheetah/tui/tests/: test_agent_screen.py  test_chat_menu.py  test_helpers.py  test_settings_screen.py  test_train_menu.py
transformer/: attention.cpp  attention.h  general_mha_model.cpp  general_mha_model.h  mlp.cpp  rms.h  rope.cpp  rope.h  transformer.cpp  transformer.h
utils/: cache.cpp  shard.cpp
